--- a/Code/Docker/routed_trex_cfg.yaml
+++ b/Code/Docker/routed_trex_cfg.yaml
@@ -1,6 +1,6 @@
 - port_limit    : 2
   version       : 2
-  low_end       : true
+#  low_end       : true
   interfaces    : ["veth0", "veth3"]
   port_info     :
                  - ip         : 1.1.1.1
